--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <canvas></canvas>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        let socket=io('http://localhost:5500')
+        let socket=io('https://a-smart-board.herokuapp.com/')
     </script> 
     <script src="./tools.js"></script>
     <script src="./canvas.js"></script>
